--- a/style.css
+++ b/style.css
@@ -409,6 +409,23 @@ select option {
     width: 100%;
 }
 
+.background-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    /* User requested background image with transparency */
+    background-image: url('search-bg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.25;
+    /* Subtle transparency to make appearance "goo[d]" */
+    pointer-events: none;
+}
+
 .results-list {
     position: absolute;
     top: 100%;
